--- a/xterm.man
+++ b/xterm.man
@@ -1,7 +1,7 @@
 '\" t
-.\" $XTermId: xterm.man,v 1.467 2010/10/11 00:36:08 tom Exp $
+.\" $XTermId: xterm.man,v 1.476 2011/02/08 21:46:33 tom Exp $
 .\"
-.\" Copyright 1996-2009,2010 by Thomas E. Dickey
+.\" Copyright 1996-2010,2011 by Thomas E. Dickey
 .\"
 .\"                         All Rights Reserved
 .\"
@@ -55,7 +55,11 @@
 .\" from The Open Group.
 .\"
 .\" updated by Thomas E. Dickey for XFree86, July 1996 - February 2006.
-.
+.\"
+.\" Bulleted paragraph
+.de bP
+.IP \(bu 4
+..
 .\" these would be fallbacks for DS/DE,
 .\" but groff changed the meaning of the macros.
 .de NS
@@ -1075,9 +1079,13 @@ If the option contains a \*(``/\*('' character, that delimits the characters
 used for the pseudo-terminal name from the file descriptor.
 Otherwise, exactly two characters are used from the option for
 the pseudo-terminal name, the remainder is the file descriptor.
-Examples:
+Examples
+(the first two are equivalent
+since the descriptor follows the last \*(``/\*(''):
+.sp
 .nf
 .RS 15
+-S/dev/pts/123/45
 -S123/45
 -Sab34
 .RE
@@ -3117,6 +3125,54 @@ The default is ``3''.
 Specifies whether or not reverse video should be simulated.
 The default is
 \*(``false.\*(''
+.IP
+There are several aspects to reverse video in \fIxterm\fP:
+.RS
+.bP
+The command-line \fB\-rv\fP option tells the X libraries to reverse
+the foreground and background colors.
+\fIXterm\fP's command-line options set resource values.
+In particular, the X Toolkit sets the \fBreverseVideo\fP resource
+when the \fB\-rv\fP option is used.
+.bP
+If the user has also used command-line options \fB\-fg\fP or \fB\-bg\fP 
+to set the foreground and background colors,
+\fIxterm\fP does not see these options directly.
+Instead,
+it examines the resource values to reconstruct the command-line options,
+and determine which of the colors is the user's intended foreground, etc.
+Their actual values are irrelevant to the reverse video function;
+some users prefer the X defaults (black text on a white background),
+others prefer white text on a black background.
+.bP
+After startup,
+the user can toggle the "Enable Reverse Video" menu entry.
+This exchanges the current foreground and background colors
+of the VT100 widget,
+and repaints the screen.
+Because of the X resource hierarchy,
+the \fBreverseVideo\fP resource applies to more than the VT100 widget.
+.RE
+.IP
+Programs running in an \fIxterm\fP can also use control sequences
+to enable the VT100 reverse video mode.
+These are independent of the \fIreverseVideo\fP resource and the menu entry.
+\fIXterm\fP exchanges the current foreground and background colors
+when drawing text affected by these control sequences.
+.IP
+Other control sequences can alter the foreground and background colors
+which are used:
+.RS
+.bP
+Programs can also use the ANSI color control sequences to set the
+foreground and background colors.
+.bP
+Extensions to the ANSI color controls (such as 16-, 88- or 256-colors)
+are treated similarly to the ANSI control.
+.bP
+Using other control sequences (the "\fIdynamic colors\fR" feature),
+a program can change the foreground and background colors.
+.RE
 .TP 8
 .B "reverseWrap (\fPclass\fB ReverseWrap)"
 Specifies whether or not reverse-wraparound should be enabled.
@@ -3359,6 +3415,8 @@ it translates the ISO-8859-1 string to UTF-8 to work with the X libraries
 which assume the string is UTF-8.
 .IP
 However, some users may wish to write a title string encoded in UTF-8.
+The window manager is responsible for drawing window titles.
+Some window managers (not all) support UTF-8 encoding of window titles.
 Set this resource to \*(``true\*('' to allow UTF-8 encoded title strings.
 That cancels the translation to UTF-8,
 allowing UTF-8 strings to be displayed as is.
@@ -4731,6 +4789,12 @@ of lines saved off the top of the screen.
 It is also invoked from the \fBclearsavedlines\fP entry in \fIvtMenu\fP.
 The effect is identical to a hardware reset (RIS) control sequence.
 .TP 8
+.B "copy-selection(\fIdestname\fP [, ...])"
+This action puts the currently selected text into all of the selections or
+cutbuffers specified by \fIdestname\fP.
+Unlike \fBselect-end\fP, it does not send a mouse position or otherwise
+modify the internal selection state.
+.TP 8
 .B "create-menu(\fIm/v/f/t\fP)"
 This action creates one of the menus used by \fIxterm\fP,
 if it has not been previously created.
@@ -4771,6 +4835,9 @@ by echoing the event's position
 .in +8
 ^X ESC G <line+\*(`` \*(''> <col+\*(`` \*(''>
 .in -8
+.TP 8
+.B "fullscreen()"
+Asks the window manager to change the window to full-screen.
 .TP 8
 .B "iconify()"
 Iconifies the window.
@@ -4974,6 +5041,8 @@ selection at the current text cursor position.
 .B "select-end(\fIdestname\fP [, ...])"
 This action puts the currently selected text into all of the selections or
 cutbuffers specified by \fIdestname\fP.
+It also sends a mouse position and updates the internal selection state
+to reflect the end of the selection process.
 .TP 8
 .B "select-extend()"
 This action tracks the pointer and extends the selection.
@@ -5298,6 +5367,7 @@ which is set by the \fBselectToClipboard\fP resource:
          Shift <KeyPress> Select:select-cursor-start() \\\&
                                  select-cursor-end(SELECT, CUT_BUFFER0) \\n\\\&
          Shift <KeyPress> Insert:insert-selection(SELECT, CUT_BUFFER0) \\n\\\&
+                 Alt <Key>Return:fullscreen()\n\
         <KeyRelease> Scroll_Lock:scroll-lock() \\n\\\&
     Shift~Ctrl <KeyPress> KP_Add:larger-vt-font() \\n\\\&
     Shift Ctrl <KeyPress> KP_Add:smaller-vt-font() \\n\\\&
