--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,15 @@
+xterm-dev (297) unstable; urgency=low
+
+  * miscellaneous fixes for old issues
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sun, 04 Aug 2013 08:58:31 -0400
+
+xterm-dev (296) unstable; urgency=low
+
+  * Build-fix for #295 changes
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Tue, 09 Jul 2013 21:20:04 -0400
+
 xterm-dev (295) unstable; urgency=low
 
   * Workaround for problem with ld --as-needed option
