--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,15 @@
+xterm-dev (306) unstable; urgency=low
+
+  * fix incomplete implementation of new SGRs
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Tue, 03 Jun 2014 16:25:02 -0400
+
+xterm-dev (305) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 05 May 2014 14:51:42 -0400
+
 xterm-dev (304) unstable; urgency=low
 
   * maintenance updates
