--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,15 @@
+xterm-dev (310) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 14 Jul 2014 19:36:58 -0400
+
+xterm-dev (309) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sat, 28 Jun 2014 10:34:28 -0400
+
 xterm-dev (308) unstable; urgency=low
 
   * maintenance updates
