--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,15 @@
+xterm-dev (316) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Thu, 05 Mar 2015 15:52:55 -0500
+
+xterm-dev (315) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Fri, 02 Jan 2015 07:49:44 -0500
+
 xterm-dev (314) unstable; urgency=low
 
   * maintenance updates
