--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,21 @@
+xterm-dev (330) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 12 Jun 2017 17:34:51 -0400
+
+xterm-dev (329) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sun, 04 Jun 2017 09:40:17 -0400
+
+xterm-dev (328) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 24 Oct 2016 18:07:15 -0400
+
 xterm-dev (327) unstable; urgency=low
 
   * maintenance updates
