--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
--- $XTermId: INSTALL,v 1.163 2017/05/30 08:32:35 tom Exp $
+-- $XTermId: INSTALL,v 1.176 2017/12/25 12:48:26 tom Exp $
 -------------------------------------------------------------------------------
 -- Copyright 1997-2016,2017 by Thomas E. Dickey
 --
@@ -48,6 +48,16 @@ the available options.  This script uses "enable" and "disable" to indicate
 the sense of the default behavior.
 
 The options (in alphabetic order):
+
+  --disable-256-color     disable 256-color support
+
+  	Do not compile-in code that interprets SGR 38 and 48 for 256-colors.
+	If this feature is disabled, the 88-color feature will be used.
+
+  --disable-88-color      disable 88-color support
+
+	Do not compile-in code that interprets SGR 38 and 48 for 88-colors.
+	The 256-color option overrides this.
 
   --disable-16-color      disable 16-color support
 
@@ -137,6 +147,11 @@ The options (in alphabetic order):
 
 	Note: If desktop-utils is not found they will not be installed anyway.
 
+  --disable-direct-color  disable direct color support
+
+  	Do not compile-in code that interprets SGR 38 and 48 for direct colors.
+	This feature extends the 256-color feature.
+
   --disable-doublechars   disable support for double-size chars
 
   	Do not compile-in code that supports font-manipulation needed to
@@ -156,7 +171,7 @@ The options (in alphabetic order):
 
   --disable-freetype      disable freetype library-support
 
- 	Do not use freetype libraries if they are found.  Normally they will
+	Do not use freetype libraries if they are found.  Normally they will
 	be used automatically.
 
   --disable-full-tgetent  disable check for termcap library
@@ -285,6 +300,10 @@ The options (in alphabetic order):
 	Do not compile-in code that suppresses redundant updates to the
 	titlebar when the text has not changed.
 
+  --disable-screen-dumps  disable XHTML and SVG screen dumps
+
+	Do not compile-in code that provides XHTML and SVG screen dumps.
+
   --disable-selection-ops disable selection operations
 
 	Do not compile-in code to support the actions which allow users
@@ -345,7 +364,7 @@ The options (in alphabetic order):
 	ISO 6429 defines a few more which historically have found little use.
 	Some people find these amusing.
 
-	This is normally enabled.
+	This is normally enabled.  The direct-colors feature relies upon it.
 
   --disable-wide-chars    disable wide-character support
 
@@ -364,14 +383,6 @@ The options (in alphabetic order):
 	character.  Unicode values can be larger than 16-bits, up to 21-bits.
 	This uses less memory, but is less complete.  However, most languages
 	are covered by the 16-bit encoding.
-
-  --enable-256-color      enable 256-color support
-
-  	Compile-in code that interprets SGR 38 and 48 for 256-colors.
-
-  --enable-88-color       enable 88-color support
-
-	Compile-in code that interprets SGR 38 and 48 for 88-colors.
 
   --enable-alt-sends-esc  set default altSendsEscape resource (default: no)
 
@@ -522,10 +533,6 @@ The options (in alphabetic order):
 
   	Compile-in code to support experimental sixel-graphics
 
-  --enable-sun-fkeys      enable support for Sun-style function keys
-
-  	Compile-in code to support Sun-style function keys.
-
   --enable-toolbar        enable pulldown menus on toolbar
 
   	Compile-in code that builds a toolbar with pulldown menus.  The
@@ -613,9 +620,10 @@ The options (in alphabetic order):
 
 	Check for and link with dbmalloc.
 
-  --with-desktop-category=XXX  one or more desktop catgories or auto
+  --with-desktop-category=XXX  one or more desktop categories or auto
 	This is a list of names.  The configure script maps blanks and commas
-	to semicolons (";") which are used by the desktop utils as a separator.
+	to semicolons (";") which are used by the desktop utilities as a
+	separator.
 
 	The default value "auto" tells the configure script to look
 	at existing ".desktop" files for xterm and common terminal
@@ -625,7 +633,7 @@ The options (in alphabetic order):
 
   --with-freetype-config  configure script to use for FreeType
 
- 	Use a specific option value to tell the configure script to try
+	Use a specific option value to tell the configure script to try
 	just one of the variations:
 
 	"pkg*", e.g., pkg-config or pkgconfig uses whatever pkg-config
@@ -703,14 +711,18 @@ The options (in alphabetic order):
   --with-man2html[=XXX]   use XXX rather than groff
 
 	Specify an alternative program to use for converting manpages and
-	control sequences document to html.  If the option is given, its
-	default value is "man2html", otherwise it is "groff" with groff's
-	special options.  The "man2html" script reads formatted nroff output
-	from its standard input, and writes html to its standard output.  Other
-	input/output conventions are not currently supported.
+	control sequences document to html.  The default value for the option
+	is "man2html".  If the "man2html" script is not found, then "groff" is
+	used with groff's special options.
+	
+	The "man2html" script reads formatted nroff output from its standard
+	input, and writes html to its standard output.  Other input/output
+	conventions are not currently supported.
 
 	See
 		http://invisible-island.net/scripts
+		http://invisible-island.net/scripts/man2html.html
+
 	for an up-to-date version of "man2html".
 
   --with-neXtaw           link with neXT Athena library
@@ -733,9 +745,18 @@ The options (in alphabetic order):
 	directed to other variations (such as nxterm) which do not
 	support the background-color erase capability.
 
+  --with-pixmapdir=DIR    directory in which to install pixmaps (DATADIR/pixmaps)
+
+	Specify directory in which to install ".xpm" files.
+
   --with-pcre             use PCRE for regular-expressions
 
-	If regular expressions are not disable (--disable-regex), use PCRE
+	If regular expressions are not disabled (--disable-regex), use PCRE
+	rather than the POSIX regular expressions.
+
+  --with-pcre2            use PCRE2 for regular-expressions
+
+	If regular expressions are not disabled (--disable-regex), use PCRE2
 	rather than the POSIX regular expressions.
 
   --with-pkg-config{=path} enable/disable use of pkg-config
@@ -794,7 +815,7 @@ The options (in alphabetic order):
 
   --with-xpm=DIR          use Xpm library for colored icon, may specify path
 
- 	Use Xpm library to show colored icon in window decoration, e.g.,
+	Use Xpm library to show colored icon in window decoration, e.g.,
 	title area.
 
 	Use --without-xpm to suppress this feature.
