--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+xterm-dev (332) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 01 Jan 2018 11:13:30 -0500
+
 xterm-dev (331) unstable; urgency=low
 
   * maintenance updates
