--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+xterm-dev (333) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sun, 15 Apr 2018 20:46:52 -0400
+
 xterm-dev (332) unstable; urgency=low
 
   * maintenance updates
