--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,15 @@
+xterm-dev (335) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 13 Aug 2018 16:24:45 -0400
+
+xterm-dev (334) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Fri, 04 May 2018 17:08:25 -0400
+
 xterm-dev (333) unstable; urgency=low
 
   * maintenance updates
